--- a/atom-web/src/main/webapp/contact.html
+++ b/atom-web/src/main/webapp/contact.html
@@ -38,7 +38,7 @@
 			<div id="myTabContent" class="tab-content">
 				<div role="tabpanel" class="tab-pane in active" id="medium" aria-labelledby="medium-tab">
 					<div class="contact_summary">
-						<div class="contact_title">企业合作</div>
+						<div class="contact_title">媒体合作</div>
 						<p>高程工作与国内的各领域垂直媒体、优秀的自媒体建立了密切的合作关系。</p>
 						<div class="contact_title">
 							<span>media@hijobs.me</span>
